=== HEAD

* Handle IN/NOT IN with an empty array (jeremyevans)

* Emulate IN/NOT IN with multiple columns where the database doesn't support it and a dataset is given (jeremyevans)

* Add Dataset#unused_table_alias, for generating a table alias that has not yet been used in the query (jeremyevans)

* Support an empty database argument in bin/sequel, useful for testing things without a real database (jeremyevans)

* Support for schemas and aliases when eager graphing (jeremyevans)

* Handle using an SQL::Identifier as an 4th option to Dataset#join_table (jeremyevans)

* Move gem spec from Rakefile to a .gemspec file, for compatibility with gem build and builder (jeremyevans) (#285)

* Fix MSSQL 2005+ offset emulation on ruby 1.9 (jeremyevans)

* Make active_model plugin work with ActiveModel 3.0 beta Lint specs, now requires active_model (jeremyevans)

* Correctly create foreign key constraints on MySQL with the InnoDB engine, but you must specify the :key option (jeremyevans)

* Add an optimistic_locking plugin for models, similar to ActiveRecord's optimistic locking support (jeremyevans)

* Handle implicitly qualified symbols in UPDATE statements, useful for updating joined datasets (jeremyevans)

* Have schema_dumper extension pass options hash to Database#tables (jeremyevans) (#283)

* Make all internal uses of require thread-safe (jeremyevans)

* Refactor connection pool into 4 separate pools, increase performance for unsharded setups (jeremyevans)

* Change a couple instance_evaled lambdas into procs, for 1.9.2 compatibility (jeremyevans)

* Raise error message earlier if DISTINCT ON is used on SQLite (jeremyevans)

* Speed up prepared statements on SQLite (jeremyevans)

* Correctly handle ODBC timestamps when database_timezone is nil (jeremyevans)

* Add Sequel::ValidationFailed#errors (tmm1)

=== 3.8.0 (2010-01-04)

* Catch cases in the postgres adapter where exceptions weren't converted or raised appropriately (jeremyevans)
